refs #21598 Updated term reason on PY.

--- a/app/views/exchanges/employer_applications/_index.html.erb
+++ b/app/views/exchanges/employer_applications/_index.html.erb
@@ -63,8 +63,8 @@
           <tr id="<%= application.id %>" class="plan-year-actions hidden">
             <td colspan="2">
               <div class="term_action_radios hidden">
-                <%= radio_button_tag 'term_actions', 'voluntary_term', true  %> VOLUNTARY TERMINATION <br />
-                <%= radio_button_tag 'term_actions', 'non_pay_term'  %> NON-PAY TERMINATION
+                <%= radio_button_tag 'term_actions', 'voluntary', true  %> VOLUNTARY TERMINATION <br />
+                <%= radio_button_tag 'term_actions', 'nonpayment'  %> NON-PAY TERMINATION
               </div>
             </td>
             <td colspan="2">
