--- a/app/views/notices/shop_employer_notices/out_of_pocket_notice.html.erb
+++ b/app/views/notices/shop_employer_notices/out_of_pocket_notice.html.erb
@@ -1,6 +1,6 @@
 <div class="page-break">
   <%= render partial: 'notices/shared/cover_page', :locals => {notice: notice} %>
-  <%= render partial: 'notices/shared/logo_and_address_shop'%>
+  <%= render partial: 'notices/shared/logo_and_address_shop', :locals => {notice: notice} %>
   <%= render partial: "notices/shared/shop_address", :locals => {notice: notice} %>
   <%= render partial: 'notices/shared/date', :locals => {notice: notice} %>
 
