--- a/app/views/users/_username_and_email_form.html.erb
+++ b/app/views/users/_username_and_email_form.html.erb
@@ -1,39 +1,31 @@
-<%= form_tag(confirm_change_username_user_path, method: :put, id: "changeUsernameForm", class:"form-horizontal", remote: true) do %>
-<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-<% if user.oim_id.present? %>
-<%= hidden_field_tag :current_oim_id, user.oim_id %>
+<%= form_tag(confirm_change_username_and_email_user_path, method: :put, id: "changeUsernameForm", class:"form-horizontal", remote: true) do %>
+	<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+	<% if user.oim_id.present? %>
+		<%= hidden_field_tag :current_oim_id, user.oim_id %>
+	<% end %>
+	<div class="row no-buffer form-wrapper-buffer">
+	  <h3 class="title">Edit User Credentials</h3>
+	  <div class="col-md-12 no-pd col-sm-12 col-xs-12">
+	    <div class="col-md-3 col-md-offset-3 col-sm-3 col-md-offset-3 col-xs-12 form-group form-group-lg no-pd" style='margin-right: -225px; margin-left: 224px; !important;'>
+	      New Username 
+	      <%= text_field_tag :oim_id, nil, {class:"input_txt", onblur:'validateFields()', id:'inputNewUsername'} %>
+				<span id="helpBlock2" class="help-block username-block hidden"></span>
+	    </div> 
+	    <div class="col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd" style='margin-right: -225px; margin-left: 224px; !important;'>
+	      New User_Email
+	      <%= text_field_tag :new_email, nil, {class:"input_txt", onblur:'validateFields()', id:'inputNewEmail'} %>
+				<span id="helpBlock2" class="help-block email-block hidden"></span>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="row no-buffer child-row">
+    <div class="col-md-12 no-pd col-sm-12 col-xs-12">   
+      <button type='button', class="btn btn-info", id='resetUsernameAndEmail'>Reset</button>
+      <%= submit_tag "Update", class:'btn btn-primary', id:'submitUsernameChange' %> 
+    </div>
+  </div>
 <% end %>
-<div class="form-group">
-	<%= label_tag(:oim_id, "New Username", class:"col-sm-5 control-label") %>
-	<div class="col-sm-6">
-		<%= text_field_tag :oim_id, nil, {class:"form-control", onblur:'validateFields()', id:'inputNewUsername'} %>
-		<span id="helpBlock2" class="help-block username-block hidden"></span>
-	</div>
-</div>
-<br />
-<br />
-<div class="form-group">
-	<%= label_tag(:redmine_ticket_number, "Redmine Ticket Number", class:"col-sm-5 control-label") %>
-	<div class="col-sm-6">
-		<%= text_field_tag :redmine_ticket_number, nil, {class:"form-control", onblur:'validateFields()', id:'inputTicketNumber'} %>
-	</div>
-</div>
-<br />
-<br />
-<div class="form-group">
-	<%= label_tag(:reason, "Reason For Change", class:"col-sm-5 control-label") %>
-	<div class="col-sm-6">
-		<%= text_area_tag :reason, nil, {class:"form-control", rows:"3", onblur:'validateFields()', id:'inputReason'} %>
-	</div>
-</div>
-<br />
-<br />
-<div class="form-group">
-	<div class="row">
-		<%= submit_tag "Submit", class:'btn btn-primary', id:'submitUsernameChange' %>
-		<% end %>
-	</div>
-</div>
 
 <script>
 	var validUsername = false;
@@ -44,20 +36,17 @@
 	
 	var currentOptions = {
 		username:String,
-		reason:String,
-		ticketNumber:String,
+		newEmail:String,
 		validUsernamePresent:Boolean
 	}
 	
 	function validateFields() {
-		redmineTicketNumber = document.getElementById('inputTicketNumber');
 		username = document.getElementById('inputNewUsername');
-		reason = document.getElementById('inputReason');
+		newEmail = document.getElementById('inputNewEmail');
 		
 		currentOptions.username = username.value;
-		currentOptions.reason = reason.value;
-		currentOptions.ticketNumber = redmineTicketNumber.value;
-	
+		currentOptions.newEmail = newEmail.value;
+			
 		if (username.value.length && username.value.length >= 8) {
 			validateUsername(username.value)
 		} else {
@@ -66,7 +55,7 @@
 			document.getElementsByClassName('username-block')[0].innerHTML = "Username must be at least 8 characters";
 		}
 		
-		if (currentOptions.reason.length && currentOptions.ticketNumber.length && currentOptions.validUsernamePresent == true) {
+		if (currentOptions.newEmail.length && currentOptions.validUsernamePresent == true) {
 			enableSubmit()
 		} else {
 			disableSubmit()
