Revert "Merge remote-tracking branch 'origin/user-story-29682' into stage"
This reverts commit c056bfcdd1d7b7cb0af1bf684a01acafc08c6851, reversing
changes made to 2186454a924f0c64045f93f108290980ab76bf17.

--- a/app/views/users/_username_form.html.erb
+++ b/app/views/users/_username_form.html.erb
@@ -30,7 +30,7 @@
 <br />
 <div class="form-group">
 	<div class="row">
-		<%= submit_tag "Submit", class:'btn btn-primary', id:'submitUsernameChange', data: { confirm: 'Are you sure you want to make changes?' } %>
+		<%= submit_tag "Submit", class:'btn btn-primary', id:'submitUsernameChange' %>
 		<% end %>
 	</div>
 </div>
