--- a/app/views/broker_agencies/profiles/_menu.html.erb
+++ b/app/views/broker_agencies/profiles/_menu.html.erb
@@ -68,17 +68,15 @@
             <%= l10n("broker_mail")%>
           <% end %>
         </li>
-        <% if current_user.has_hbx_staff_role? %>
+        <% if current_user.has_hbx_staff_role? || current_user.has_broker_role?%>
         <% else %>
-          <% if !current_user.has_broker_role? %>
-            <li role="presentation" class="multi-line">
-              <%= link_to url_for(SamlInformation.curam_broker_dashboard) do %>
-                First Time Applications for Medicaid
-                <br/>
-                and Premium Tax Credits
-              <% end %>
-            </li>
-          <% end %>
+          <li role="presentation" class="multi-line">
+            <%= link_to url_for(SamlInformation.curam_broker_dashboard) do %>
+              First Time Applications for Medicaid
+              <br/>
+              and Premium Tax Credits
+            <% end %>
+          </li>
         <% end %>
       </ul>
     </div>
