--- a/app/views/users/_username_email_form.html.erb
+++ b/app/views/users/_username_email_form.html.erb
@@ -1,3 +1,10 @@
+<h3>Edit User Credentials</h3>
+<div id="credentials-matches" class="hidden">
+  <h4>User Account Update Failed</h4>
+  <div id="credentials-error-message"></div>
+  <h5>Please resolve the match issue.</h5>
+</div>
+<br/>
 <%= form_tag(confirm_change_username_and_email_user_path, method: :put, id: "changeUsernameEmailForm", class:"form-horizontal", remote: true) do %>
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <% if user.oim_id.present? %>
@@ -6,11 +13,9 @@
   <% if user.email.present? %>
     <%= hidden_field_tag :current_email, user.email %>
   <% end %>
-  <div class="field-error-block alert-danger hidden">
+  <div class="field-error-block alert-danger hidden" style="margin-bottom:20px;">
   </div>
-  <br/>
-  <br/>
-  <div class="row">
+  <div class="row" style="padding-left: 150px;">
     <div class="form-group col-sm-5">
       <label for="inputNewUsername" class="col-form-label">New Username</label>
       <%= text_field_tag :new_oim_id, user.oim_id, {class:"form-control", id:'inputNewUsername'} %>
@@ -23,12 +28,12 @@
   </div>
   <br />
   <br />
-  <div class="row">
+  <div class="row" style="padding-left: 150px;">
     <div class="col-sm-1 col-sm-offset-4">
       <%= button_tag "Reset", class:'btn btn-info', id: 'resetUsernameEmailFields' %>
     </div>
     <div class="col-sm-1">
-      <%= submit_tag "Submit", class:'btn btn-primary', id: 'submitUsernameEmailChange' %>
+      <%= submit_tag "Submit", class:'btn btn-primary blocking', id: 'submitUsernameEmailChange', data: {confirm: "Are you sure?"} %>
     </div>
   </div>
 <% end %>
@@ -39,6 +44,9 @@
             var username = document.getElementById('inputNewUsername');
             var email = document.getElementById('inputNewEmail');
             var resetUsernameEmail = document.getElementById('resetUsernameEmailFields');
+            var submitUserChange = document.getElementById('submitUsernameEmailChange');
+            var errorBlock = document.getElementsByClassName('field-error-block')[0];
+            var errorMessage = document.getElementById('credentials-error-message');
 
             username.addEventListener('blur', function(event){
                 if (checkUsername()) {
@@ -47,6 +55,8 @@
                     event.preventDefault();
                     event.stopPropagation();
                 } else if (!checkEmail()) {
+                    validUsername();
+                    validEmail();
                     usernameEmailTaken();
                 }
             });
@@ -58,6 +68,8 @@
                     event.preventDefault();
                     event.stopPropagation();
                 } else if (!checkUsername()) {
+                    validUsername();
+                    validEmail();
                     usernameEmailTaken();
                 }
             });
@@ -81,52 +93,53 @@
             }
 
             function enableSubmit() {
-                document.getElementById('submitUsernameEmailChange').classList.remove('blocking');
+                submitUserChange.classList.remove('blocking');
             }
 
             function disableSubmit() {
-                document.getElementById('submitUsernameEmailChange').classList.add('blocking');
+                submitUserChange.classList.add('blocking');
             }
 
             function invalidUsername() {
-                document.getElementById('inputNewUsername').closest('.form-group').classList.add('has-error');
-                var errorBlock = document.getElementsByClassName('field-error-block')[0];
+                username.closest('.form-group').classList.add('has-error');
                 errorBlock.innerText = "Username must be 8 or more characters.";
                 errorBlock.classList.remove('hidden');
             }
 
-            function usernameTaken(id, name) {
-                document.getElementById('inputNewUsername').closest('.form-group').classList.add('has-error');
-                var errorBlock = document.getElementsByClassName('field-error-block')[0];
-                errorBlock.innerText = "The username matches with the following user: hbx_id " + id + "  Name: " + name ;
-                errorBlock.classList.remove('hidden');
+            function credentialsTaken(match, id, first_name, last_name) {
+                var matchDetails = document.createElement('div');
+                var message = "The "+match+" matches with the following user:";
+                while (errorMessage.firstChild) {
+                    errorMessage.removeChild(errorMessage.firstChild);
+                }
+                matchDetails.innerHTML = message + "<br><br>\nHBX ID: "+id.bold()+"<br>\nFirst Name: "+first_name.bold()+"<br>\nLast Name: "+last_name.bold();
+                errorMessage.appendChild(matchDetails);
+                document.getElementById('credentials-matches').classList.remove('hidden');
             }
 
             function validUsername() {
-                document.getElementById('inputNewUsername').closest('.form-group').classList.remove('has-error');
-                var errorBlock = document.getElementsByClassName('field-error-block')[0];
+                username.closest('.form-group').classList.remove('has-error');
                 errorBlock.classList.add('hidden');
             }
 
             function invalidEmail() {
-                document.getElementById('inputNewEmail').closest('.form-group').classList.add('has-error');
-                var errorBlock = document.getElementsByClassName('field-error-block')[0];
+                email.closest('.form-group').classList.add('has-error');
                 errorBlock.innerText = "Email address is not correct.";
                 errorBlock.classList.remove('hidden');
             }
 
-            function emailTaken(id, name) {
-                document.getElementById('inputNewEmail').closest('.form-group').classList.add('has-error');
-                var errorBlock = document.getElementsByClassName('field-error-block')[0];
-                errorBlock.innerText = "The user email matches with the following user: hbx_id " + id + "  Name: " + name;
-                errorBlock.classList.remove('hidden');
-            }
-
             function validEmail() {
-                document.getElementById('inputNewEmail').closest('.form-group').classList.remove('has-error');
-                var errorBlock = document.getElementsByClassName('field-error-block')[0];
+                email.closest('.form-group').classList.remove('has-error');
                 errorBlock.classList.add('hidden');
             }
+
+            function noMatches() {
+                while (errorMessage.firstChild) {
+                    errorMessage.removeChild(errorMessage.firstChild);
+                }
+                document.getElementById('credentials-matches').classList.add('hidden');
+
+            };
 
             function usernameEmailTaken(){
                 $.ajax({
@@ -134,18 +147,13 @@
                     method: 'GET',
                     data: {"email": email.value, "oim_id": username.value},
                     success: function(data){
-                        if (data.taken == true){
-                            if (data.username_id){
-                                disableSubmit();
-                                usernameTaken(data.username_id, data.username_name);
-                            }
-                            if (data.email_id){
-                                disableSubmit();
-                                emailTaken(data.email_id, data.email_name);
-                            }
+                        if (data.taken && data.taken.length > 1){
+                            disableSubmit();
+                            credentialsTaken(data.taken, data.id, data.first_name, data.last_name);
                         } else {
                             validUsername();
                             validEmail();
+                            noMatches();
                             enableSubmit();
                         }
                     }
