--- a/app/views/exchanges/hbx_profiles/_disable_ssn_requirement.html.erb
+++ b/app/views/exchanges/hbx_profiles/_disable_ssn_requirement.html.erb
@@ -1,5 +1,8 @@
-
-	SSN/TIN requirement has been successfully disabled for the roster of
 <% @organizations.each do |organization| %>
+  <%if organization.employer_profile.no_ssn == true%>
+    SSN/TIN requirement has been successfully disabled for the roster of
+  <%else%>
+    SSN/TIN requirement has been successfully enabled for the roster of
+  <%end%>
   <%=organization.legal_name %>
 <%end%>
