Revert "Revert "Merge remote-tracking branch 'origin/user-story-29682' into stage""
This reverts commit fad0aeaab4f472586da703dd3681e0a3281edee6.

--- a/app/views/users/_email_form.html.erb
+++ b/app/views/users/_email_form.html.erb
@@ -30,7 +30,7 @@
 	<br />
 	<div class="form-group">
 		<div class="row">
-			<%= submit_tag "Submit", class:'btn btn-primary', id:'submitEmailChange' %>
+			<%= submit_tag "Submit", class:'btn btn-primary', id:'submitEmailChange', data: { confirm: 'Are you sure you want to make changes?' } %>
 		</div>
 <% end %>
 
