--- a/app/views/users/_username_form.html.erb
+++ b/app/views/users/_username_form.html.erb
@@ -30,7 +30,7 @@
 <br />
 <div class="form-group">
 	<div class="row">
-		<%= submit_tag "Submit", class:'btn btn-primary', id:'submitUsernameChange' %>
+		<%= submit_tag "Submit", class:'btn btn-primary', id:'submitUsernameChange', data: { confirm: 'Are you sure you want to make changes?' } %>
 		<% end %>
 	</div>
 </div>
