--- a/app/views/exchanges/employer_applications/index.js.erb
+++ b/app/views/exchanges/employer_applications/index.js.erb
@@ -78,6 +78,7 @@ function initDatePicker() {
 }
 
 function validateFormat(element) {
+  pyEndDate = element.value;
   setTimeout(function() {
     if (element.value.length != 10) {
       element.value = "";
@@ -181,7 +182,6 @@ function pyAction(action, id, employer_id, term_date) {
 }
 // You can use the actionSelected here
 function submitPlanActions() {
-  pyEndDate = $('input.py-end-date').val()
   termReason = $('input[name=term_actions]:checked').val()
   trasmit_to_carrier = $('input[id=trasmit_to_carrier]').is(":checked")
   $.ajax({
