--- a/app/views/users/change_username_and_email.js.erb
+++ b/app/views/users/change_username_and_email.js.erb
@@ -1,12 +1,11 @@
-var containing_row = $("#<%= @user_id %>").closest('TR');
-var $parent_row = containing_row;
+var $containing_row = $("#user_action_<%= @user.id %>").closest('TR');
 if ( $('tr.child-row:visible').length > 0 ) {
     $('tr.child-row:visible').remove();
     $("li>a:contains('Collapse Form')").addClass('disabled');
 }
-if ( $parent_row.next().hasClass('child-row') ) {
+if ( $containing_row.next().hasClass('child-row') ) {
 } else {
-    $parent_row.after('<tr class="child-row"><td colspan="100"><%= j render partial: "users/username_and_email_form", locals: {user: user} %></td></tr>');
-    $("li>a:contains('Collapse Form')").eq(containing_row.index()).removeClass('disabled');
+    $containing_row.after('<tr class="child-row"><td colspan="100"><%= j render partial: "users/username_email_form", locals: {user: @user} %></td></tr>');
+    $("li>a:contains('Collapse Form')").eq($containing_row.index()).removeClass('disabled');
     $('.dropdown.pull-right').removeClass('open');
 }
