--- a/app/views/exchanges/employer_applications/index.js.erb
+++ b/app/views/exchanges/employer_applications/index.js.erb
@@ -77,12 +77,28 @@ function initDatePicker() {
   $('input.date').datepicker({dateFormat: "mm/dd/yy"})
 }
 
-function validateFormat(element) {
+function validateFormat(element, pyStartOn, pyEndOn) {
   pyEndDate = element.value;
+  
   setTimeout(function() {
-    if (element.value.length != 10) {
+    if (element.value.length != 10 || element.value.indexOf("/") != 2) {
       element.value = "";
-      disableSubmitButton()
+      alert("Please use mm/dd/yyyy format");
+      disableSubmitButton();
+    } else {
+      enableSubmitButton()
+    }
+    start = pyStartOn.split("/");
+    end = pyEndOn.split("/")
+    value = element.value.split("/")
+    startDate = new Date(start[0],start[1],start[2]).setHours(0,0,0,0);
+    endDate = new Date(end[0],end[1],end[2]).setHours(0,0,0,0);
+    currentDate = new Date(value[0],value[1],value[2]).setHours(0,0,0,0);
+    // Checks if date is in range
+    if (currentDate < startDate) {
+      element.value = "";
+      alert("Please select date within Start Date and End Date");
+      disableSubmitButton();
     } else {
       enableSubmitButton()
     }
