Refs 19392 IVL Plan Match integration with Enroll App-CB

--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -8,6 +8,7 @@
       <% end %>
       <h4>
         <%= find_my_doctor %>
+        <%= checkbook_integration%>
         </br>
         <% if plan_match_dc %>
         <%= estimate_your_costs %>
