--- a/app/views/shared/person/_personal_information.html.erb
+++ b/app/views/shared/person/_personal_information.html.erb
@@ -26,10 +26,10 @@
                                                  required: true, readonly: f.object.is_a?(Forms::EmployeeRole) } %>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd">
-      <%= f.text_field :ssn, placeholder: "SOCIAL SECURITY", class: "required floatlabel form-control", :disabled => f.object.no_ssn == "1" ? true : false, readonly: f.object.is_a?(Forms::EmployeeRole) %>
+      <%= f.text_field :ssn, placeholder: "SOCIAL SECURITY", class: "required floatlabel form-control", required: f.object.no_ssn == "1" ? false : true, :disabled => f.object.no_ssn == "1" ? true : false, readonly: f.object.is_a?(Forms::EmployeeRole) %>
     </div>
     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd top-buffer" >
-      <%= f.check_box :no_ssn, :value => false, :onclick=>"$('#person_ssn').prop('disabled', !$('#person_ssn').prop('disabled'))" %>
+      <%= f.check_box :no_ssn,  :value => false, :onclick=>"$('#person_ssn').prop('disabled', !$('#person_ssn').prop('disabled')); $('#person_ssn').prop('required', !$('#person_ssn').prop('required'))" %>
       <%= f.label :no_ssn do %>
         <span class='no_ssn'>&nbsp;I don't have an SSN</span>
       <% end %>
